Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
       <!-- Card 2: Hazem Elseify -->
       <div class="team-card">
-        <img src="img/hazem.png" alt="Hazem Elseify Picture" class="team-photo" />
+        <img src="img/hazem.PNG" alt="Hazem Elseify Picture" class="team-photo" />
         <div class="team-meta">
           <h3>Hazem Elseify</h3>
           <p>BI Consultant at Dataplus</p>
@@ -178,7 +178,7 @@
       <p class="testimonial-subtext">Hear what our users have to say about their experience with us.</p>
     </div>
     <div class="testimonial-card">
-      <img src="img/moaz.PNG" alt="Testimonial Photo" class="testimonial-photo" />
+      <img src="img/abdullah.PNG" alt="Testimonial Photo" class="testimonial-photo" />
       <blockquote class="testimonial-text">
         “It worked great, I got shapes out of my old dashboards for future reuse and I even shared it internally with my team. Thanks Zyad and Hazem”
       </blockquote>
