Update index.html for improved structure and readability

--- a/index.html
+++ b/index.html
@@ -93,23 +93,23 @@
 
       <!-- Card 2: Hazem Elseify -->
       <div class="team-card">
-        <img src="img/hazem.PNG" alt="Hazem Elseify Picture" class="team-photo" />
+        <img src="/img/hazem.PNG" alt="Hazem Elseify Picture" class="team-photo" />
         <div class="team-meta">
           <h3>Hazem Elseify</h3>
           <p>BI Consultant at Dataplus</p>
           <p class="team-note">Co-Founder</p>
           <div class="social-links">
             <a href="mailto:zyadwael366@gmail.com" aria-label="Email">
-              <img src="img/email.svg" alt="Email Icon" class="social-icon" />
+              <img src="/img/email.svg" alt="Email Icon" class="social-icon" />
             </a>
             <a href="https://www.linkedin.com/in/hazemelseify/" target="_blank" aria-label="Linkedin">
-              <img src="img/linkedin.svg" alt="Linkedin Logo" class="social-icon" />
+              <img src="/img/linkedin.svg" alt="Linkedin Logo" class="social-icon" />
             </a>
             <a href="https://public.tableau.com/app/profile/zyadwael" target="_blank" aria-label="Instagram">
-              <img src="img/Instagram.svg" alt="Instagram Logo" class="social-icon" />
+              <img src="/img/Instagram.svg" alt="Instagram Logo" class="social-icon" />
             </a>
             <a href="https://public.tableau.com/app/profile/hazem.elseify/vizzes" target="_blank" aria-label="Tableau">
-              <img src="img/tableau.svg" alt="Tableau Logo" class="social-icon" />
+              <img src="/img/tableau.svg" alt="Tableau Logo" class="social-icon" />
             </a>
           </div>
         </div>
@@ -117,17 +117,17 @@
 
       <!-- Card 3: Moaz Wael -->
       <div class="team-card">
-        <img src="img/moaz.png" alt="Moaz Wael Picture" class="team-photo" />
+        <img src="/img/moaz.png" alt="Moaz Wael Picture" class="team-photo" />
         <div class="team-meta">
           <h3>Moaz Wael</h3>
           <p>Undergraduate at AASTMT</p>
           <p class="team-note">Software Engineer</p>
           <div class="social-links">
             <a href="mailto:moazwael1999@gmail.com" aria-label="Email">
-              <img src="img/email.svg" alt="Email Icon" class="social-icon" />
+              <img src="/img/email.svg" alt="Email Icon" class="social-icon" />
             </a>
             <a href="https://www.linkedin.com/in/moazwael/" target="_blank" aria-label="Linkedin">
-              <img src="img/linkedin.svg" alt="Linkedin Logo" class="social-icon" />
+              <img src="/img/linkedin.svg" alt="Linkedin Logo" class="social-icon" />
             </a>
             <a href="https://www.instagram.com/moazwael_?igsh=MWo5aWxkcWx4OGNw" target="_blank" aria-label="Instagram">
               <img src="img/Instagram.svg" alt="Instagram Logo" class="social-icon" />
@@ -178,7 +178,7 @@
       <p class="testimonial-subtext">Hear what our users have to say about their experience with us.</p>
     </div>
     <div class="testimonial-card">
-      <img src="img/abdullah.PNG" alt="Testimonial Photo" class="testimonial-photo" />
+      <img src="/img/abdullah.PNG" alt="Testimonial Photo" class="testimonial-photo" />
       <blockquote class="testimonial-text">
         “It worked great, I got shapes out of my old dashboards for future reuse and I even shared it internally with my team. Thanks Zyad and Hazem”
       </blockquote>
