Fix image paths in social links for consistency

--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
           <p class="team-note">Founder</p>
           <div class="social-links">
             <a href="mailto:zyadwael366@gmail.com" aria-label="Email">
-              <img src="img/email.svg" alt="Email Icon" class="social-icon" />
+              <img src="/img/email.svg" alt="Email Icon" class="social-icon" />
             </a>
             <a href="https://www.linkedin.com/in/zyadwael/" target="_blank" aria-label="Linkedin">
-              <img src="img/linkedin.svg" alt="Linkedin Logo" class="social-icon" />
+              <img src="/img/linkedin.svg" alt="Linkedin Logo" class="social-icon" />
             </a>
             <a href="https://public.tableau.com/app/profile/zyadwael" target="_blank" aria-label="Twitter">
-              <img src="img/x.svg" alt="Twitter Logo" class="social-icon" />
+              <img src="/img/x.svg" alt="Twitter Logo" class="social-icon" />
             </a>
             <a href="https://public.tableau.com/app/profile/zyad.wael/vizzes" target="_blank" aria-label="Tableau">
-              <img src="img/tableau.svg" alt="Tableau Logo" class="social-icon" />
+              <img src="/img/tableau.svg" alt="Tableau Logo" class="social-icon" />
             </a>
           </div>
         </div>
@@ -130,7 +130,7 @@
               <img src="/img/linkedin.svg" alt="Linkedin Logo" class="social-icon" />
             </a>
             <a href="https://www.instagram.com/moazwael_?igsh=MWo5aWxkcWx4OGNw" target="_blank" aria-label="Instagram">
-              <img src="img/Instagram.svg" alt="Instagram Logo" class="social-icon" />
+              <img src="/img/Instagram.svg" alt="Instagram Logo" class="social-icon" />
             </a>
           </div>
         </div>
