--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <img src="/img/linkedin.svg" alt="Linkedin Logo" class="social-icon" />
             </a>
             <a href="https://public.tableau.com/app/profile/zyadwael" target="_blank" aria-label="Instagram">
-              <img src="/img/Instagram.svg" alt="Instagram Logo" class="social-icon" />
+              <img src="/img/instagram.svg" alt="Instagram Logo" class="social-icon" />
             </a>
             <a href="https://public.tableau.com/app/profile/hazem.elseify/vizzes" target="_blank" aria-label="Tableau">
               <img src="/img/tableau.svg" alt="Tableau Logo" class="social-icon" />
@@ -117,7 +117,7 @@
 
       <!-- Card 3: Moaz Wael -->
       <div class="team-card">
-        <img src="/img/moaz.png" alt="Moaz Wael Picture" class="team-photo" />
+        <img src="/img/moaz.PNG" alt="Moaz Wael Picture" class="team-photo" />
         <div class="team-meta">
           <h3>Moaz Wael</h3>
           <p>Undergraduate at AASTMT</p>
@@ -130,7 +130,7 @@
               <img src="/img/linkedin.svg" alt="Linkedin Logo" class="social-icon" />
             </a>
             <a href="https://www.instagram.com/moazwael_?igsh=MWo5aWxkcWx4OGNw" target="_blank" aria-label="Instagram">
-              <img src="/img/Instagram.svg" alt="Instagram Logo" class="social-icon" />
+              <img src="/img/instagram.svg" alt="Instagram Logo" class="social-icon" />
             </a>
           </div>
         </div>
