Fix typo in testimonial title and update card section styles for better readability

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         “It worked great, I got shapes out of my old dashboards for future reuse and I even shared it internally with my team. Thanks Zyad and Hazem”
       </blockquote>
       <h3 class="testimonial-name">Abdullah Hassan</h3>
-      <p class="testimonial-title">Procorre Inc. Senior Data Analyst</p>
+      <p class="testimonial-title">Procore Inc. Senior Data Analyst</p>
       <div class="testimonial-nav">
         <button class="nav-arrow" aria-label="Previous testimonial">&lt;</button>
         <div class="testimonial-dots">
