New Updates Using Agmented Code

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
       </a>
       <nav class="nav-menu" aria-label="Main navigation">
         <ul>
-          <li><a href="#tools">Tools</a></li>
           <li><a href="#who-we-are">Who We Are</a></li>
+          <li><a href="#tools">Tools</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+
         </ul>
       </nav>
       <a href="#contact" class="contact-btn">Contact Us</a>
@@ -73,7 +75,7 @@
         <div class="team-meta">
           <h3>Zyad Wael</h3>
           <p>BI Specialist at Dataplus</p>
-          <p class="team-note">Founder</p>
+          <p class="team-note">Co-Founder</p>
           <div class="social-links">
             <a href="mailto:zyadwael366@gmail.com" aria-label="Email">
               <img src="/img/email.svg" alt="Email Icon" class="social-icon" />
